# devopsys

./: .env.example  .gitignore  README.md  pyproject.toml  script.py  script.sh
project/: README.md  main.py  pyproject.toml
src/devopsys/: __main__.py  config.py  langchain_support.py  logutil.py  main.py  ollama.py  orchestrator.py  project_builder.py  router.py  run_logger.py  settings.py  workspace.py
src/devopsys/agents/: base.py  bash.py  bash_utils.py  devops.py  docker.py  linux.py  project_architect.py  python.py  python_utils.py  registry.py  rust.py  universal.py  verifier.py
src/devopsys/models/: base.py  dummy.py  ollama.py  openai.py
src/devopsys/monitor/: stream.py
src/devopsys/system/: analyzer.py  services.py
src/devopsys/telegram/: bot.py
src/devopsys/web/: app.py
tests/: test_agent_heuristic.py  test_agents_unittest.py  test_analyzer.py  test_bash_utils.py  test_cli_commands.py  test_config_save.py  test_main_import.py  test_monitor_snapshot.py  test_mpl_audit.py  test_orchestrator.py  test_project_scaffolding.py  test_python_normalise.py  test_python_utils.py  test_router_unittest.py  test_telegram_client.py
