[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devopsys"
version = "0.1.0"
description = "Local multi-agent DevOps assistant (Codex-like) with CLI"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["devops", "llm", "cli", "docker", "linux", "codegen"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "click>=8.1.7,<9.0",
  "httpx>=0.27.0,<0.28",
  "langchain-core>=0.2.6,<0.3.0",
  "pydantic>=2.8.2,<3.0",
  "pydantic-settings>=2.4.0,<3.0",
  "rich>=13.7.1,<14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
]
llm = [
  "transformers>=4.41.0",
  "accelerate>=0.28.0",
  "torch>=2.2.0; platform_system != 'Darwin'",
  "llama-cpp-python>=0.2.60",
]

[project.scripts]
devopsys = "devopsys.__main__:cli_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
